<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#FAF7F7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear"
        tools:text="@string/default_string" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#FAF7F7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        tools:text="@string/default_string" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#FAF7F7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        tools:text="@string/default_string" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#FAF7F7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        tools:text="@string/default_string" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#FAF7F7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/tv4"
        tools:text="@string/default_string" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#FAF7F7"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toBottomOf="@+id/tv5"
        tools:text="@string/default_string" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space3"
        android:layout_width="15dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <Space
        android:id="@+id/space4"
        android:layout_width="15dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="8dp"
        android:text="@string/btn_enter"
        app:layout_constraintBottom_toTopOf="@+id/space6"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tf" />

    <EditText
        android:id="@+id/tf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/space6"
        app:layout_constraintEnd_toStartOf="@+id/btn_enter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space3"
        tools:text="@string/default_string"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:insetBottom="0dp"
        android:text="@string/label2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label_cmd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_link" />

    <Button
        android:id="@+id/label_cmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:insetBottom="0dp"
        android:text="@string/label3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_text" />

    <Button
        android:id="@+id/label_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:insetBottom="0dp"
        android:text="@string/label1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/label_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space3" />

    <Space
        android:id="@+id/space6"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toTopOf="@+id/label_link"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintStart_toEndOf="@+id/space3" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintTop_toBottomOf="@+id/space" />

</androidx.constraintlayout.widget.ConstraintLayout>